<resources>
    <string name="app_name">Chronos</string>
    <string name="general_tab">Today</string>
    <string name="history_tab">History</string>

    <string name="user_name">John Doe</string>

    <string name="create_student_activity_title">Create Student</string>
    <string name="edit_student_activity_title">Edit Student</string>
    <string name="create_teacher_activity_title">Create Teacher</string>
    <string name="edit_teacher_activity_title">Edit Teacher</string>
    <string name="edit_parent_activity_title">Edit Parent</string>
    <string name="create_room_activity_title">Create Room</string>
    <string name="edit_room_activity_title">Edit Room</string>
    <string name="create_subject_activity_title">Create Subject</string>
    <string name="edit_subject_activity_title">Edit Subject</string>
    <string name="create_class_activity_title">Create Class</string>
    <string name="edit_class_activity_title">Edit Class</string>

    <string name="id_number">ID Number</string>
    <string name="id_hint">17-004-001</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password">Forgot Password?</string>

    <string name="nav_open_drawer">Open navigation drawer</string>
    <string name="nav_close_drawer">Close navigation drawer</string>

    <string name="student_id">ID Number:</string>
    <string name="student_first_name">First Name:</string>
    <string name="student_first_name_hint">Juan</string>
    <string name="student_last_name">Last Name:</string>
    <string name="student_last_name_hint">Dela Cruz</string>
    <string name="student_middle_name">Middle Name:</string>
    <string name="student_middle_name_hint">Santos</string>
    <string name="student_email">Email:</string>
    <string name="student_email_hint">juan.delacruz@email.com</string>
    <string name="student_phone">Phone:</string>
    <string name="student_phone_hint">09291234567</string>
    <string name="student_password">Password:</string>
    <string name="college_name">College:</string>
    <string name="room_number">Room:</string>
    <string name="room_number_hint">401</string>
    <string name="subject_name">Name:</string>
    <string name="subject_name_hint">English I</string>
    <string name="subject_description">Description:</string>
    <string name="subject_description_hint">This subject prepares student for English II</string>
    <string name="subject_units">Units:</string>
    <string name="class_teacher">Teacher:</string>
    <string name="class_room">Room:</string>
    <string name="class_day">Day:</string>
    <string name="class_time">Time:</string>
    <string name="class_subject">Subject:</string>

    <string name="student_created">New Student Created!</string>
    <string name="student_updated">Student Information Updated!</string>
    <string name="student_deleted">Student Deleted!</string>
    <string name="student_delete_confirm">Are you sure you want to delete this student?</string>

    <string name="teacher_created">New Teacher Created!</string>
    <string name="teacher_updated">Teacher Information Updated!</string>
    <string name="teacher_deleted">Teacher Deleted!</string>
    <string name="teacher_delete_confirm">Are you sure you want to delete this teacher?</string>

    <string name="parent_created">New Parent Created!</string>
    <string name="parent_updated">Parent Information Updated!</string>
    <string name="parent_deleted">Parent Deleted!</string>
    <string name="parent_delete_confirm">Are you sure you want to delete this parent?</string>

    <string name="room_created">New Room Created!</string>
    <string name="room_updated">Room Information Updated!</string>
    <string name="room_deleted">Room Deleted!</string>
    <string name="room_delete_confirm">Are you sure you want to delete this room?</string>

    <string name="subject_created">New Subject Created!</string>
    <string name="subject_updated">Subject Information Updated!</string>
    <string name="subject_deleted">Subject Deleted!</string>
    <string name="subject_delete_confirm">Are you sure you want to delete this subject?</string>

    <string name="class_created">New Class Created!</string>
    <string name="class_updated">Class Information Updated!</string>
    <string name="class_deleted">Class Deleted!</string>
    <string name="class_delete_confirm">Are you sure you want to delete this class?</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="firebase_db_url">https://x8-voltaic-range-g.firebaseio.com/</string>
    <string name="firebase_api_key">AIzaSyDYNeJ9QthNGBfQKwHIUYhLU1vle_eJ-CU</string>
    <string name="firebase_api_id">1:559503614993:android:4ced93d6b8496a7c</string>

    <string name="servicedesc">Some Description</string>
    <string name="aiddescription">Some Description</string>

    <string name="lorem">
Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse eu ante vehicula, tincidunt ante ac, tempor ex. Mauris ut dui sapien. Phasellus dapibus elit ac sapien aliquet viverra. Etiam facilisis sagittis arcu ac eleifend. Fusce augue lectus, sollicitudin in tristique eget, rutrum in elit. Sed eget lectus ac lacus volutpat rutrum a ut ligula. Mauris eget scelerisque magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Fusce feugiat augue ut tortor mollis scelerisque. Proin porta metus eget malesuada porta. Integer mattis ac sem id rhoncus. In molestie, metus sed fringilla auctor, ante libero venenatis purus, non vehicula arcu est eu justo. In sit amet feugiat nisi.

Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Aenean rutrum nisi sit amet convallis bibendum. In risus nisi, congue sit amet mollis quis, congue eget purus. Aliquam erat volutpat. Sed tristique, erat non bibendum ultricies, arcu felis lobortis quam, et porta justo ligula at erat. Praesent id faucibus nisi. Etiam erat nibh, interdum non euismod eget, cursus quis justo. In aliquam risus id rhoncus imperdiet. Maecenas vitae semper diam. Nullam eu iaculis nisi.

Nulla eleifend nisl porta, hendrerit leo eget, ornare nisi. Proin ante diam, eleifend ac facilisis at, facilisis eu ligula. Cras quis ex est. Sed vel ex auctor, placerat ipsum dapibus, interdum lorem. Fusce ullamcorper vel nibh ac dictum. Vivamus sit amet vehicula sapien. Praesent feugiat mauris eu libero ullamcorper, et hendrerit mi rhoncus. Quisque justo lacus, suscipit eget mi et, convallis malesuada mi. Mauris semper faucibus magna consectetur auctor. Duis in purus sed dolor semper luctus. Quisque euismod laoreet suscipit. Morbi non accumsan lorem. Praesent sit amet metus porta, tristique dolor sit amet, finibus ipsum. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Integer consequat augue eget congue commodo. Proin fringilla cursus suscipit.
    </string>
    <string name="title_activity_teacher_main">TeacherMainActivity</string>
</resources>
