<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.platacode.chronos.CreateClassActivity">

    <include layout="@layout/toolbar_main"></include>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/class_subject" />

        <Spinner
            android:id="@+id/subjectSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></Spinner>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/class_room" />

        <Spinner
            android:id="@+id/roomSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></Spinner>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/class_teacher" />

        <Spinner
            android:id="@+id/teacherSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></Spinner>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/class_day" />

        <Spinner
            android:id="@+id/daySpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></Spinner>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/class_time" />

        <Button
            android:id="@+id/btnSetTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


    </LinearLayout>

</LinearLayout>
