<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.platacode.chronos.CreateRoomActivity">

    <include layout="@layout/toolbar_main"></include>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/college_name" />

        <Spinner
            android:id="@+id/collegeSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></Spinner>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/room_number" />

        <EditText
            android:id="@+id/txtRoomNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/room_number_hint"
            android:inputType="number" />

    </LinearLayout>

</LinearLayout>
